fixing list overlapping with logout

--- a/public/css/join.css
+++ b/public/css/join.css
@@ -154,3 +154,7 @@ body{
 	cursor:pointer;
 	text-decoration: underline;
 }
+
+.list-group {
+	clear:both;
+}
